--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title> Home </ion-title>
-  </ion-toolbar>
-</ion-header>
+<shared-page-header-component
+pageName="Home"
+></shared-page-header-component>
 
 <ion-content [fullscreen]="true">
 
