Apex Charts Import + Pie Chart Component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,5 +3,7 @@ pageName="Home"
 ></shared-page-header-component>
 
 <ion-content [fullscreen]="true">
-
+    <div class="chart-container">
+        <shared-pie-chart-component></shared-pie-chart-component>
+    </div>
 </ion-content>
