Pie Chart Update

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,6 +4,8 @@ pageName="Home"
 
 <ion-content [fullscreen]="true">
     <div class="chart-container">
-        <shared-pie-chart-component></shared-pie-chart-component>
+        <shared-pie-chart-component
+            [chartData]="mockData"
+        ></shared-pie-chart-component>
     </div>
 </ion-content>
