--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,38 @@
-<shared-page-header-component
-pageName="Home"
-></shared-page-header-component>
+<shared-page-header-component pageName="Home"></shared-page-header-component>
 
 <ion-content [fullscreen]="true">
+
     <div class="chart-container">
-        <shared-pie-chart-component
-            [chartData]="mockData"
-        ></shared-pie-chart-component>
+        <shared-pie-chart-component [chartData]="mockData"></shared-pie-chart-component>
     </div>
+
+    <ion-card>
+        <ion-list>
+            <ion-item>
+                <ion-label>Type</ion-label>
+                <ion-select placeholder="Select One">
+                    <ion-select-option *ngFor="let option of filterOptions" [value]="option.value">{{ option.text }}
+                    </ion-select-option>
+                </ion-select>
+            </ion-item>
+
+            <ion-item>
+                <ion-label>Interval</ion-label>
+                <ion-select placeholder="Select One">
+                    <ion-select-option *ngFor="let optionFilter of filterIntervalOptions" [value]="optionFilter.value">
+                        {{
+                        optionFilter.text }}</ion-select-option>
+                </ion-select>
+            </ion-item>
+
+        </ion-list>
+    </ion-card>
+
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>Total: <span numberColor class="right-float">{{ totalFiltered }}</span></ion-card-title>
+        </ion-card-header>
+    </ion-card>
+
+
 </ion-content>
