Updating not found routes + history page update

--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -4,7 +4,6 @@
 
   <ion-card>
     <ion-list>
-
       <ion-item>
         <ion-label>Filter Date</ion-label>
         <ion-select placeholder="Select One">
@@ -12,7 +11,14 @@
           </ion-select-option>
         </ion-select>
       </ion-item>
+    </ion-list>
+  </ion-card>
 
+  <ion-card>
+    <ion-list>
+      <ion-item>
+        
+      </ion-item>
     </ion-list>
   </ion-card>
 
