--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,5 +34,11 @@
         </ion-card-header>
     </ion-card>
 
+    <ion-card>
+        <ion-button color="success" expand="block" class="history-button" routerLink = '/history'>
+            <ion-icon name="time"></ion-icon>
+            <span>History</span>
+        </ion-button>
+    </ion-card>
 
 </ion-content>
