--- a/src/app/shared/components/template/page-header/page-header.component.html
+++ b/src/app/shared/components/template/page-header/page-header.component.html
@@ -1,8 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button *ngIf="!backButton; else backButtonTemplate"></ion-menu-button>
     </ion-buttons>
     <ion-title> {{ pageName }} </ion-title>
   </ion-toolbar>
 </ion-header>
+
+<ng-template #backButtonTemplate>
+  <ion-back-button defaultHref="/"></ion-back-button>
+</ng-template>
