Add Register component + import ngx mask + text-icon directive + Ionic Events Service

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -35,7 +35,7 @@
     </ion-card>
 
     <ion-card>
-        <ion-button color="success" expand="block" class="history-button" routerLink='/history'>
+        <ion-button color="success" expand="block" routerLink='/history' textIconButton>
             <ion-icon name="time"></ion-icon>
             <span>History</span>
         </ion-button>
