--- a/src/app/pages/home/components/add-register/add-register.component.html
+++ b/src/app/pages/home/components/add-register/add-register.component.html
@@ -1,4 +1,37 @@
-<shared-page-header-component 
-  pageName="New Register"
-  [backButton] = true
-></shared-page-header-component>
+<shared-page-header-component pageName="New Register" [backButton]=true></shared-page-header-component>
+
+<ion-content [fullscreen]="true">
+
+  <ion-card>
+    <ion-card-content>
+
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+        <ion-item>
+          <ion-label position="floating">Value</ion-label>
+          <ion-input formControlName='value' (ionChange)="updateWithMask($event)"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Type</ion-label>
+          <ion-select placeholder="Select One" formControlName = "type">
+            <ion-select-option *ngFor = "let type of mockedTypes" [value]="type">{{ type }}</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Description</ion-label>
+          <ion-input formControlName='description'></ion-input>
+        </ion-item>
+
+        <ion-button expand="block" type="submit" textIconButton>
+          <ion-icon name="add-circle"></ion-icon>
+          <span>Add new Register</span>
+        </ion-button>
+
+      </form>
+
+    </ion-card-content>
+  </ion-card>
+
+</ion-content>
