--- a/src/app/pages/home/components/add-register/add-register.component.html
+++ b/src/app/pages/home/components/add-register/add-register.component.html
@@ -34,4 +34,15 @@
     </ion-card-content>
   </ion-card>
 
+  <div class="bottom-card">
+    <ion-card>
+      <ion-card-content>
+        <ion-button expand="block" type="submit" textIconButton routerLink="../add-type">
+          <ion-icon name="add-circle"></ion-icon>
+          <span>Add new Type</span>
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
 </ion-content>
