Changes on expansable item + Using Data Service Create and Get Methods + Update on Donut Chart + Filter

--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -14,9 +14,9 @@
     </ion-list>
   </ion-card>
 
-  <expansable-item-component
-    *ngFor = "let register of registers"
-    [data] = 'register'
-  ></expansable-item-component>
+  <shared-expansable-item-component
+    *ngFor="let register of registers"
+    [dataRegister]="register"
+  ></shared-expansable-item-component>
 
 </ion-content>
