--- a/src/app/pages/home/components/add-register/add-register.component.html
+++ b/src/app/pages/home/components/add-register/add-register.component.html
@@ -15,7 +15,7 @@
         <ion-item>
           <ion-label>Type</ion-label>
           <ion-select placeholder="Select One" formControlName = "type">
-            <ion-select-option *ngFor = "let type of mockedTypes" [value]="type">{{ type }}</ion-select-option>
+            <ion-select-option *ngFor = "let type of types" [value]="type.type">{{ type.type }}</ion-select-option>
           </ion-select>
         </ion-item>
 
