--- a/src/app/pages/home/components/add-register/add-register.component.html
+++ b/src/app/pages/home/components/add-register/add-register.component.html
@@ -24,6 +24,21 @@
           <ion-input formControlName='description'></ion-input>
         </ion-item>
 
+        <ion-item>
+          <ion-label>Date - {{ form.value.register_date | date: 'dd/MM/YYYY HH:mm:ss' }}</ion-label>
+          <ion-button fill="clear" id="open-date-input-2">
+            <ion-icon icon="calendar"></ion-icon>
+          </ion-button>
+          <ion-popover trigger="open-date-input-2" show-backdrop="false">
+            <ng-template>
+              <ion-datetime
+                formControlName = 'register_date'
+                #popoverDatetime2
+              ></ion-datetime>
+            </ng-template>
+          </ion-popover>
+        </ion-item>
+
         <ion-button expand="block" type="submit" textIconButton>
           <ion-icon name="add-circle"></ion-icon>
           <span>Add new Register</span>
@@ -44,5 +59,11 @@
       </ion-card-content>
     </ion-card>
   </div>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" routerLink="/history">
+    <ion-fab-button color="tertiary">
+        <ion-icon name="time"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
 </ion-content>
