--- a/src/app/pages/home/components/add-type/add-type.component.html
+++ b/src/app/pages/home/components/add-type/add-type.component.html
@@ -2,6 +2,10 @@
 
 <ion-content [fullscreen]="true">
 
+  <shared-refresher-component
+    (refreshPage) = 'shouldRefresh($event)'
+  ></shared-refresher-component>
+
   <ion-card>
     <ion-card-content>
 
@@ -29,20 +33,6 @@
 
     </ion-card-content>
   </ion-card>
-
-  <!-- <ion-card>
-    <ion-card-header>
-      <ion-card-title>
-        All Types
-      </ion-card-title>
-    </ion-card-header>
-
-    <ion-card-content>
-      <ion-list>
-        <ion-item *ngFor="let type of types"> {{ type.type }}</ion-item>
-      </ion-list>
-    </ion-card-content>
-  </ion-card> -->
 
   <shared-expansable-item-component
     *ngFor="let type of types"
