--- a/src/app/pages/home/components/add-register/add-register.component.html
+++ b/src/app/pages/home/components/add-register/add-register.component.html
@@ -2,6 +2,10 @@
 
 <ion-content [fullscreen]="true">
 
+  <shared-refresher-component
+    (refreshPage) = 'shouldRefresh($event)'
+  ></shared-refresher-component>
+
   <ion-card>
     <ion-card-content>
 
