--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,13 +76,13 @@
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
+// @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
    */
 
-  body {
+  body[color-theme = 'dark'] {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -145,6 +145,10 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+    span.apexcharts-legend-text {
+      color: whitesmoke !important;
+    }
   }
 
   /*
@@ -152,7 +156,7 @@
    * -------------------------------------------
    */
 
-  .ios body {
+  .ios body[color-theme = 'dark'] {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -196,7 +200,7 @@
    * -------------------------------------------
    */
 
-  .md body {
+  .md body[color-theme = 'dark'] {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
@@ -233,8 +237,4 @@
 
     --ion-card-background: #1e1e1e;
   }
-
-  span.apexcharts-legend-text {
-    color: whitesmoke !important;
-  }
-}
+// }
